Update 88. Merge Sorted Array.md

--- a/Array/88. Merge Sorted Array.md
+++ b/Array/88. Merge Sorted Array.md
@@ -37,9 +37,9 @@ class Solution(object):
         """
         p1, p2 = m-1, n-1
         for i in range(m+n-1, -1, -1):
-            if p2 < 0:
+            if p2 < 0:                                  # 如果num2填完的話 剩下的num1一樣
                 break 
-            elif p1 >= 0 and nums1[p1] > nums2[p2]:     # 這邊要用elif
+            elif p1 >= 0 and nums1[p1] > nums2[p2]:     # 這邊要用elif 如果nums1填完的話剩下直接nums2複製過去（p1>=0）
                 nums1[i] = nums1[p1]
                 p1 -= 1
             else:
