Update 28. Find the Index of the First Occurrence in a String.md

--- a/Array/28. Find the Index of the First Occurrence in a String.md
+++ b/Array/28. Find the Index of the First Occurrence in a String.md
@@ -3,9 +3,9 @@
 Given two strings **needle** and **haystack**, return the index of the first occurrence of **needle** in **haystack**, or **-1** if **needle** is not part of **haystack**.
 
 ##### Example 1:
-Input: haystack = "sadbutsad", needle = "sad"
-Output: 0
-Explanation: "sad" occurs at index 0 and 6.
+Input: haystack = "sadbutsad", needle = "sad" 
+Output: 0 
+Explanation: "sad" occurs at index 0 and 6. 
 The first occurrence is at index 0, so we return 0.
 
 ##### Example 2:
@@ -137,11 +137,15 @@ Space complexity: O(1)
 
 ## Other solution
 運用內建函數，複雜度一樣
+
+### Python
 ```python
 class Solution(object):
     def strStr(self, haystack, needle):
         return haystack.find(needle)
 ```
+
+### C++
 ```c++
 class Solution {                                    // 定義了一個名為 Solution 的類
 public:                                             // 宣告 public 部分，接下來的所有方法對外部是可見的
