--- a/Array/28. Find the Index of the First Occurrence in a String.md
+++ b/Array/28. Find the Index of the First Occurrence in a String.md
@@ -3,15 +3,15 @@
 Given two strings **needle** and **haystack**, return the index of the first occurrence of **needle** in **haystack**, or **-1** if **needle** is not part of **haystack**.
 
 ##### Example 1:
-Input: haystack = "sadbutsad", needle = "sad" 
-Output: 0 
-Explanation: "sad" occurs at index 0 and 6. 
-The first occurrence is at index 0, so we return 0.
+* Input: haystack = "sadbutsad", needle = "sad" 
+* Output: 0 
+* Explanation: "sad" occurs at index 0 and 6. 
+* The first occurrence is at index 0, so we return 0.
 
 ##### Example 2:
-Input: haystack = "leetcode", needle = "leeto"
-Output: -1
-Explanation: "leeto" did not occur in "leetcode", so we return -1.
+* Input: haystack = "leetcode", needle = "leeto"
+* Output: -1
+* Explanation: "leeto" did not occur in "leetcode", so we return -1.
 
 ## Approach :
 我們用一個迴圈遍歷 haystack 的 多個索引位置，檢查從該位置開始的子串是否和 needle 相同。如果找到相同的子串，則返回索引；如果遍歷結束都未找到，則返回 -1。
@@ -132,8 +132,8 @@ public:
 ```
 ### Complexity:
 假設 n 是 haystack 的長度，m 是 needle 的長度
-Time complexity: O((n-m+1)*m) or O(n∗m)
-Space complexity: O(1)
+* Time complexity: O((n-m+1)*m) or O(n∗m)
+* Space complexity: O(1)
 
 ## Other solution
 運用內建函數，複雜度一樣
