Update 14. Longest Common Prefix.md

--- a/Array/14. Longest Common Prefix.md
+++ b/Array/14. Longest Common Prefix.md
@@ -3,14 +3,16 @@ Write a function to find the longest common prefix string amongst an array of st
 If there is no common prefix, return an empty string "".
 
 **Example 1:**
-* Input: strs = ["flower","flow","flight"]
-* Output: "fl"
-
+```
+Input: strs = ["flower","flow","flight"]
+Output: "fl"
+```
 **Example 2:**
-* Input: strs = ["dog","racecar","car"]
-* Output: ""
-* Explanation: There is no common prefix among the input strings.
-
+```
+Input: strs = ["dog","racecar","car"]
+Output: ""
+Explanation: There is no common prefix among the input strings.
+```
 ## Approach :
 比字串中一個個字符，
 我們可以將所有字串的字符一個一個地按列進行比較。對於每一列字符，檢查所有字串是否有相同的字符，如果有，則這個字符是公共前綴的一部分；如果沒有，則停止比較
